Fix double border on browse preview without layout toggle.

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1264,6 +1264,10 @@ body.vertical-menu footer {
   a {
     margin-bottom: (.5 * $global-margin);
   }
+
+  & + .resource-list {
+    border-top: 0;
+  }
 }
 
 .preview-block .resource-list {
